fix(msp): status page content overflow

--- a/shell/app/modules/msp/monitor/status-insight/pages/status/status.scss
+++ b/shell/app/modules/msp/monitor/status-insight/pages/status/status.scss
@@ -1,7 +1,6 @@
 @import './status-common.scss';
 
 .project-status-page {
-  min-height: 100%;
   padding: 20px;
   background-color: $white;
   border-radius: $radius;
